# tusb

./: AGENTS.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
crd/: overview.md
prd/: overview.md
src/tusb/: __init__.py  __main__.py  app.py  config.py  models.py
src/tusb/devices/: __init__.py  manager.py  scanner.py
src/tusb/storybook/: __main__.py  app.py  mocks.py  screen.py
src/tusb/ui/: __init__.py  screens.py  widgets.py
src/tusb/utils/: __init__.py  fstab.py
