[project]
name = "tusb"
version = "0.1.0"
description = "TUI for managing USB devices on Linux"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.scripts]
tusb = "tusb.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]