[project]
name = "tusb"
version = "0.3.1"
description = "TUI for managing USB devices on Linux"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["linux", "usb", "mount", "tui", "device-manager"]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "textual>=8.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.scripts]
tusb = "tusb.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
